--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Andrea Rinaldi
 description: 'Andrea Rinaldi - young and passionate Software Engineer'
 url: 'https://andrerinaldi.github.io/andrearinaldi'
-baseurl: '/andrearinaldi'
+baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 disqus_shortname: 'rinaldiandrea'
 
